Rename some nav items, add a white outline to make sure they are visible on any background

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -271,6 +271,7 @@ input[type=text] {
   border-bottom: 4px solid transparent;
   margin: 0;
   padding: 1.5ex 2ex;
+  text-shadow: -1px -1px 0 #fff, 1px -1px 0 #fff, -1px 1px 0 #fff, 1px 1px 0 #fff;
 }
 
 #settings-menu {
